--- a/index.html
+++ b/index.html
@@ -36,13 +36,19 @@
           </h3>
         </div>
       </div>
+      <div class="attribution">
+        Challenge by
+        <a
+          href="https://www.frontendmentor.io/challenges/profile-card-component-cfArpWshJ/hub"
+          target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a
+          href="https://www.frontendmentor.io/profile/hashmi7917"
+          target="_blank"
+          >Hashmi Muqtadeer</a
+        >.
+      </div>
     </main>
-
-    <!-- <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
   </body>
 </html>
