--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </h3>
         </div>
       </div>
-      <div class="attribution">
+      <!-- <div class="attribution">
         Challenge by
         <a
           href="https://www.frontendmentor.io/challenges/profile-card-component-cfArpWshJ/hub"
@@ -48,7 +48,7 @@
           target="_blank"
           >Hashmi Muqtadeer</a
         >.
-      </div>
+      </div> -->
     </main>
   </body>
 </html>
